# YTDownloader

./: .gitignore  Cargo.toml  Main.cpp  README.md  Utils.cpp  Utils.h  YTDownloader.rc  YTDownloader.sln  YTDownloader.vcxproj  YTDownloader.vcxproj.filters  build.rs  notes.txt  resource1.h
src/: lib.rs  main.rs
src/command/: deno.rs  mod.rs  yt_dlp.rs
src/github/: mod.rs
src/lang/: english.rs  german.rs  mod.rs
src/platform/: windows.rs
src/screen/: download.rs  home.rs  mod.rs  update.rs
src/screen/home/: download.rs  info_panel.rs  menu_bar.rs  mod.rs  popup.rs  tasks.rs
src/screen/update/: mod.rs  tasks.rs
src/widget/: easing.rs  mod.rs
