[package]
name = "yt-downloader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image"] }
iced_aw = { version = "0.13.1", features = ["full"] }

windows = { version = "0.62.2", features = [
  "Win32_UI_WindowsAndMessaging",
]}

serde = "1.0.228"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"

[build-dependencies]
winresource = "0.1.30"
