[package]
name = "yt_downloader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image"] }
iced_aw = { version = "0.13.1", features = ["full"] }

windows = { version = "0.62.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
]}

serde = "1.0.228"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.2.0"
which = "8.0.2"
dirs = "6.0.0"

[build-dependencies]
winresource = "0.1.30"
