[package]
name = "yt_downloader"
version = "1.0.3"
edition = "2024"
build = "build.rs"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image", "sipper", "advanced"] }
iced_aw = { version = "0.13.1", features = ["full"] }

windows = { version = "0.62.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_System_StationsAndDesktops",
]}

serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.2.0"
which = "8.0.2"
dirs = "6.0.0"
serde_json = "1.0.149"
futures-util = "0.3.32"
rfd = "0.17.2"
windows-registry = "0.6.1"
windows-result = "0.4.1"
url = { version = "2.5.8", features = ["serde"] }
lyon_algorithms = "1.0.19"
ordermap = "1.1.0"
tracing-appender = "0.2.4"

[build-dependencies]
winresource = "0.1.30"
